Cros splitscreen: Fix crash during shutdown when splitscreen is active.

The reason for this crash is when a window is destroying, it's still
regarded as an "activatable" window in MRU window list and is then
put in overview by SplitViewController::OnWindowDestroying(), which
will then cause crash when trying to adjust its bounds in overview.
(Currently the crash is only observed on Chrome built on linux
workstation, not reproducable on real devices)

To fix this, we observe OnWindowDestroyed() instead of
OnWindowDestroying() in SplitViewController.

Bug: 835925
Change-Id: Ieda91eb3f8ab12e2120365b0804a30aeef8d8f2f
Reviewed-on: https://chromium-review.googlesource.com/1091534
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565662}
Former-commit-id: 0dbb07358ba8ab9694fa73e4a691812912df044d